# programming-studio

./: .gitignore  LICENSE  README.md
2017-04-23/: Annie_Clojure.clj
2017-04-23/tobin/: jumper.cpp
2017-05-01/tobin/: l33t-translator.rkt
2017-05-06/tobin/easy-mini-kanren/: subset-sum.rkt
2017-05-10/tobin/src/: Main.scala
2017-W16/tobin/: Makefile
2017-W17/tobin/: l33t-translator.rkt
2017-W18/: annie.rs
2017-W18/nbertagnolli/: add_zero.rs
2017-W18/tobin/: subset-sum.rkt
2017-W20/: annie_soln.rkt
2017-W20/gavin/RotatingWords.playground/: Contents.swift  timeline.xctimeline
2017-W20/gavin/RotatingWords.xcodeproj/: project.pbxproj
2017-W20/nbertagnolli/: RotateStrings.scala
2017-W20/tobin/: rotated-words.cabal  tobin.cabal
2017-W20/tobin/app/: Main.hs
2017-W20/tobin/src/: Rotations.hs
2017-W20/tobin/test/: Spec.hs
2017-W21/: annie_soln.rkt  tobin.rkt
2017-W21/gavin.playground/: Contents.swift
2017-W21/nbertagnolli/: trip_scheduler.rkt
2017-W21/tobin/: shopping-cart.rkt  test.txt
2017-W22/annie/: ono.py
2017-W22/gavin/: build.xml
2017-W22/nbertagnolli/: collatz_tag.rs
2017-W22/tobin/: tagMachine.fs
2017-W23/tobin/: tourney.rkt
2017-W25/tobin/: README.md  philosophy  philosophy.cabal
2017-W26/adunn/: alarm_clock.py
2017-W26/annie/: butReallyWhatTimeIsIt.py  whatTimeIsIt.py  whatTimeIsIt.sh
2017-W26/nbertagnolli/: what_time_is_it.go
2017-W26/tobin/: CMakeLists.txt  Package.swift
2017-W27/annie/: palinwhat.rkt
2017-W27/tobin/: build.sbt
2017-W28/annie/: 3something.go
2017-W28/tobin/: sum.go
(+28 files in other folders)
