name:                rotated-words
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/tyehle/programming-studio/tree/master/2017-W20/tobin#readme
author:              Tobin Yehle
maintainer:          tobinyehle@gmail.com
copyright:           2017 Tobin Yehle
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Rotations
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable rotated-words-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , rotated-words
  default-language:    Haskell2010

test-suite rotated-words-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , rotated-words
                     , tasty
                     , tasty-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tyehle/programming-studio/tree/master/2017-W20/tobin
